Fixed results page getting cut off. Fixed "Why" popover color. Fixed slider inches indicator alignment. Added disabled class for nav arrows.

--- a/app/scss/brands/maytag/_answers.scss
+++ b/app/scss/brands/maytag/_answers.scss
@@ -82,7 +82,7 @@
 .label-text {
 	font-family: $AG-Bold-Cnd;
 	font-size: 20px;
-	color: #000000;
+	color: #272727;
 	position: relative;
 }
 
